Revise use of stock. Also add hyphen to all uses of stock-recruitment and stock-recruit

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -65,7 +65,7 @@ Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) led to a conse
 Interior Fraser Coho show a strong positive relationship between their spatial distribution and overall abundance, which has been used as a basis for identifying aggregate abundance recovery targets and reference points for the stock group. Starting in 2006, the IFCRT identified a recovery goal of one or more viable sub-populations in each of the five 'populations', where their definition of populations aligns with CUs under the WSP [@ifcrtConservationStrategyCoho2006]. Note that from this point on, we use the term CU instead of population when describing IFCRT recovery goals to be consistent with the WSP. The IFCRT identified a short-term recovery objective that the 3-year average escapement in at least half of the sub-populations within each of the five CUs was to exceed 1,000 natural-origin spawning Coho Salmon, excluding hatchery fish spawning in the wild. Based on analysis of the relationship between aggregate abundance and the number of CUs that met this objective based on historical data, the IFCRT identified an abundance short-term recovery target of 20,000 spawners as the level required to meet their distributional objective. In addition, the IFCRT identified a long-term recovery target of 40,000 spawners, which represented a level that was expected to maintain 1,000 or more wild Coho Salmon in all 11 sub-populations. @deckerAssessmentInteriorFraser2014 updated the IFCRT's original analysis using a longer time series of escapement data. They also quantified the relationship between aggregate abundance and distribution by using a logistic regression to estimate the probability of meeting short-term and long-term recovery objectives as a function of aggregate abundance. They concluded that aggregate spawner abundance levels of 20,000 and 40,000 spawners would result in near 100% probability that the IFCRT’s short-term objective and long-term recovery objectives would be met, respectively.
 
 
-@kormanEvaluationFrameworkAssessing2019 also used logistic regressions of the relationship between the IFCRT's distributional objectives and aggregate abundance when evaluating how exploitation and smolt-to-adult survival rates affected the ability of Interior Fraser Coho to meet conservation targets. Their approach was similar to that of @deckerAssessmentInteriorFraser2014, except they applied logistic regressions at the CU-level instead of the SMU-level. Using this approach, they calculated the probability that IFCRT sub-population objectives were met as a function of total escapement to the CU within their simulation evaluation. When evaluating how well conservation targets were met at the SMU-level, they chose to rely on the previous values of 20,000 and 40,000 identified by the IFCRT instead of updating these values. Finally, the 2018 RPA used an updated logistic regression to identify a long-term recovery target for Interior Fraser Coho that met the long-term IFCRT objective of 1000 spawners in all sub-populations [@arbeiderInteriorFraserCoho2020]. As a result, @arbeiderInteriorFraserCoho2020 recommended that the long-term recovery target for the stock should be a 3-year geometric mean abundance of 35,935 natural-origin spawners.  
+@kormanEvaluationFrameworkAssessing2019 also used logistic regressions of the relationship between the IFCRT's distributional objectives and aggregate abundance when evaluating how exploitation and smolt-to-adult survival rates affected the ability of Interior Fraser Coho to meet conservation targets. Their approach was similar to that of @deckerAssessmentInteriorFraser2014, except they applied logistic regressions at the CU-level instead of the SMU-level. Using this approach, they calculated the probability that IFCRT sub-population objectives were met as a function of total escapement to the CU within their simulation evaluation. When evaluating how well conservation targets were met at the SMU-level, they chose to rely on the previous values of 20,000 and 40,000 identified by the IFCRT instead of updating these values. Finally, the 2018 RPA used an updated logistic regression to identify a long-term recovery target for Interior Fraser Coho that met the long-term IFCRT objective of 1000 spawners in all sub-populations [@arbeiderInteriorFraserCoho2020]. As a result, @arbeiderInteriorFraserCoho2020 recommended that the long-term recovery target for the stock<!--LW: should this be left as stock?--> should be a 3-year geometric mean abundance of 35,935 natural-origin spawners.  
 
 
 
@@ -100,16 +100,16 @@ The third approach is based on the distribution of spawning escapement among sub
 Estimates of S~gen~ are required when assessing CU status using both the multidimensional algorithm within the Pacific Salmon Status Scanner and the comparison of current CU-level abundance to S~gen~. While the application of the Salmon Scanner to Interior Fraser Coho CUs in Pestal et al. (in prep) relies on peer-reviewed estimates of S~gen~ from the WSP Integrated Status Assessment [@dfoWildSalmonPolicy2015], we re-estimate S~gen~ here using data updated to 2020. In addition, we explore alternative stock-recruitment model formulations to better understand how model assumptions at the CU-level affect resulting LRP estimates.
 
 
-Two different formulations of stock recruitment model were used to estimate S~gen~: (i) a base Ricker model, which includes a smolt-to-adult survival covariate, and (ii) an alternative form of the Ricker model in which an informative prior distribution is used to increase S~REP~ compared to the base model, labelled 'Ricker_priorCap'. S~REP~ is the spawner abundance level at which the stock replaces itself; the relationship between S~REP~ and Ricker stock recruitment model parameters is shown below (Equation \@ref(eq:beta-Srep)). Both of these models have been previously developed and applied to Interior Fraser Coho CUs. The smolt-to-adult survival covariate used when fitting both models is a hatchery-based smolt-to-adult survival rate index. The index is not CU-specific; the same index is applied to all CUs. A third Ricker model, in which both an informative prior on S~REP~ and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study for simplicity. As noted by @kormanEvaluationFrameworkAssessing2019, there is no indication in available data of depensatory dynamics, and the SR model fit with depensatory mortality required a highly uncertain assumption about the escapement level at which depensation occurs. Furthermore, formal model selection criteria showed that adding depensatory mortality into models lead to a reduction in model fit [@kormanEvaluationFrameworkAssessing2019].
+Two different formulations of stock-recruitment model were used to estimate S~gen~: (i) a base Ricker model, which includes a smolt-to-adult survival covariate, and (ii) an alternative form of the Ricker model in which an informative prior distribution is used to increase S~REP~ compared to the base model, labelled 'Ricker_priorCap'. S~REP~ is the spawner abundance level at which the stock replaces itself; the relationship between S~REP~ and Ricker stock-recruitment model parameters is shown below (Equation \@ref(eq:beta-Srep)). Both of these models have been previously developed and applied to Interior Fraser Coho CUs. The smolt-to-adult survival covariate used when fitting both models is a hatchery-based smolt-to-adult survival rate index. The index is not CU-specific; the same index is applied to all CUs. A third Ricker model, in which both an informative prior on S~REP~ and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study for simplicity. As noted by @kormanEvaluationFrameworkAssessing2019, there is no indication in available data of depensatory dynamics, and the SR model fit with depensatory mortality required a highly uncertain assumption about the escapement level at which depensation occurs. Furthermore, formal model selection criteria showed that adding depensatory mortality into models lead to a reduction in model fit [@kormanEvaluationFrameworkAssessing2019].
 
 
 @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 used a hierarchical model structure for both the base Ricker and Ricker_priorCap models that assumed CU-level productivity parameters were sampled from a common, normal distribution shared by all CUs. Using formal model selection criteria (i.e., DIC), @kormanEvaluationFrameworkAssessing2019 found higher support for the hierarchical structure than when productivity parameters were assumed independent among CUs. However, our initial examination of the hierarchical approach applied to the updated data set lead us to select the independent CU approach for our evaluation. Firstly, we found that LRP estimates were sensitive to the assumed standard deviation on the hyper-distribution prior for the productivity parameter. Using the individual model approach removed prior influence on model results. Secondly, a logistic regression fit to status estimates obtained using the hierarchical model was unable to converge on a solution in several years between 2015 and 2020, including the most recent year (2020). 
 
 
-Future stock recruitment analyses for Interior Fraser Coho may wish to re-visit the hierarchical approach to modelling productivity. Bayesian posterior distributions of the productivity parameter from our individual model fits show some differences in productivity among CUs (particularly for the Fraser Canyon CU; Appendix \@ref(app:coho-appendix)). However, there was substantial overlap in CU-level distributions for all other CUs. We do not expect our decision to apply an individual-stock modelling approach here will affect our general conclusions. In preliminary analyses, LRPs were similar between individual and hierarchical modelling approaches.
+Future stock-recruitment analyses for Interior Fraser Coho may wish to re-visit the hierarchical approach to modelling productivity. Bayesian posterior distributions of the productivity parameter from our individual model fits show some differences in productivity among CUs (particularly for the Fraser Canyon CU; Appendix \@ref(app:coho-appendix)). However, there was substantial overlap in CU-level distributions for all other CUs. We do not expect our decision to apply an individual-stock modelling approach here will affect our general conclusions. In preliminary analyses, LRPs were similar between individual and hierarchical modelling approaches.
 
 
-The formulations for the two-stock recruitment models are described below. 
+The formulations for the two stock-recruitment<!--LW: changed this from 'two-stock recruitment'--> models are described below. 
 
 \
 &nbsp;
@@ -185,7 +185,7 @@ To maintain consistency with this previous work on Interior Fraser Coho, we also
 
 ***Calculation of Sgen***  
 
-The inclusion of a smolt-to-adult survival co-variate in both stock recruit models means that the realized productivity changes from year to year with changing survival. We incorporated this adjustment into our calculations of S~gen~ by first calculating the effective productivity for each CU as:
+The inclusion of a smolt-to-adult survival co-variate in both stock-recruit models means that the realized productivity changes from year to year with changing survival. We incorporated this adjustment into our calculations of S~gen~ by first calculating the effective productivity for each CU as:
 
 \begin{equation}
   log(\alpha'_{i}) = log(\alpha_i) + \gamma log(\overline{m})
@@ -256,7 +256,7 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 Multidimensional status derived from the Salmon Scanner is driven by abundance metrics for this SMU. Because absolute abundance data and benchmarks based on S~gen~ and S~MSY~ were available, the multidimensional algorithm within the Salmon Scanner (Figure \@ref(fig:decision-tree)) most often assigned CU status based on this metric (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Though status in some cases was also influenced by absolute abundance relative to the threshold of 1500 spawners. This occurred in the Fraser Canyon CU between 2015 and 2017. In these years, the generational average of absolute spawning abundance was < 1500 spawners and the CU was assigned Red status under the first node of the decision tree even though spawning abundances are above S~gen~.
 
  
-The total number of years in which an LRP would have been breached using the multidimensional approach depended on which Ricker stock recruitment model was used to estimate S~gen~.  When status was assessed using abundance-based benchmarks estimated from the base Ricker model, a CU status-based LRP for the SMU would have been breached in 4 of 21 years. For three of these years, the breach was based on Fraser Canyon spawning abundances dropping below 1500 spawners (2015-2017), while for the one additional year (2000) it was due to the Lower Thompson CU having spawning abundance < S~gen~ (Figure \@ref(fig:coho-CU-multiDim-Ricker)). In comparison, when status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a CU status-based LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). For both stock-recruitment models, multidimensional status from the Salmon Scanner was above Red for all CUs based on the most recent generational average, indicating that the SMU is currently above a CU status-based LRP, regardless of spawner recruitment model.
+The total number of years in which an LRP would have been breached using the multidimensional approach depended on which Ricker stock-recruitment model was used to estimate S~gen~.  When status was assessed using abundance-based benchmarks estimated from the base Ricker model, a CU status-based LRP for the SMU would have been breached in 4 of 21 years. For three of these years, the breach was based on Fraser Canyon spawning abundances dropping below 1500 spawners (2015-2017), while for the one additional year (2000) it was due to the Lower Thompson CU having spawning abundance < S~gen~ (Figure \@ref(fig:coho-CU-multiDim-Ricker)). In comparison, when status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a CU status-based LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). For both stock-recruitment models, multidimensional status from the Salmon Scanner was above Red for all CUs based on the most recent generational average, indicating that the SMU is currently above a CU status-based LRP, regardless of spawner recruitment model.
 
 
 ## LRP ESTIMATION: AGGREGATE ABUNDANCE, LOGISTIC REGRESSION LRPS
@@ -457,9 +457,9 @@ Projections were run for 30 years over 20,000 simulation trials, with projection
 
 ***Stock-recruitment dynamics***  
 
-Stock recruitment parameters for all 5 CUs were drawn from joint posterior distributions obtained by fitting the two stock recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using 'tmbStan' [@kristensenTMBAutomaticDifferentiation2016], which is an R package that allows MCMC samples to be drawn from a TMB model object using 'rStan' [@standevelopmentteamRStanInterfaceStan2020]. Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of $\hat{R}$ and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. A summary of marginal posterior distributions for each stock recruitment parameter ($\alpha$, $\beta$, $\gamma$, and $\sigma$) is provided in Appendix \@ref(app:coho-appendix). 
+Stock-recruitment parameters for all 5 CUs were drawn from joint posterior distributions obtained by fitting the two stock-recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using 'tmbStan' [@kristensenTMBAutomaticDifferentiation2016], which is an R package that allows MCMC samples to be drawn from a TMB model object using 'rStan' [@standevelopmentteamRStanInterfaceStan2020]. Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of $\hat{R}$ and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. A summary of marginal posterior distributions for each stock-recruitment parameter ($\alpha$, $\beta$, $\gamma$, and $\sigma$) is provided in Appendix \@ref(app:coho-appendix). 
 
-The two stock recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock recruitment dynamics, which we compare against each other. We also considered a simple model-averaging approach, in which we equally weighted the two stock recruit models by combining projections prior to calculating a projection LRP as a demonstration of model averaging. Additional sensitivity analyses described below were applied to the base Ricker model.  
+The two stock-recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock-recruitment dynamics, which we compare against each other. We also considered a simple model-averaging approach, in which we equally weighted the two stock-recruit models by combining projections prior to calculating a projection LRP as a demonstration of model averaging. Additional sensitivity analyses described below were applied to the base Ricker model.  
 
 \
 &nbsp;
@@ -479,7 +479,7 @@ knitr::include_graphics("figure/coho-RecuitResidCorrelation-Ricker.png")
 
 ***Variability in smolt-to-adult survival coefficient among CUs***
 
-When fitting stock-recruit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same smolt-to-adult survival rate for given sea-entry year, and that the smolt-to-adult survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single smolt-to-adult survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in spawner abundance covariation among CUs on projected LRP estimates. Three alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock recruitment model fit. 
+When fitting stock-recruit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same smolt-to-adult survival rate for given sea-entry year, and that the smolt-to-adult survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single smolt-to-adult survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in spawner abundance covariation among CUs on projected LRP estimates. Three alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock-recruitment model fit. 
 
 The resulting correlations in spawner abundances from the projections are shown in Figure \@ref(fig:coho-sigGammaCorrelation). In the forward projections, pairwise correlations in projected spawner abundances among CUs for the base case assumption of $\sigma_{\gamma}$ = 0 were similar to observed pairwise correlations in spawner abundances among CUs. Increasing $\sigma_{\gamma}$ resulted in decreased among-CU correlation in projected spawner abundances.  
 
@@ -506,7 +506,7 @@ knitr::include_graphics("figure/coho-ObsAgeProp-byCU.png")
 
 We assumed an average exploitation rate of 12.5% for all CUs in forward projections based on recent average values, with common interannual variability in exploitation rates due to shared fishery impacts among CUs each year. Interannual variability in exploitation rates was assumed to be Beta distributed (constrained between 0 and 1), with the standard deviation of the Beta distribution parameterized from estimated exploitation rates for 1998 - 2016 brood years. The corresponding coefficient of variation (CV) for interannual variability was 0.44.
 
-Exploitation rates for Interior Fraser Coho are only available at the SMU-level due to limited coded-wire indicator stocks (1-2 CUs with indicators / year) that have been available for the Fishery Regulation Assessment Model used by the Pacific Salmon Commission for Coho Salmon [@pacificsalmoncommissionJointCohoTechnical2013]. As a result, empirically-based estimates of among-CU variability in exploitation rates are not available. However, there are reasons to expect exploitation rates to vary among CUs in a given year, including differences in freshwater fisheries.  We assumed that CU-specific variability in exploitation rates was half the common (SMU-level) interannual variability (CV=0.22), and varied this in sensitivity analyses from 0 and 0.44 to cover plausible bounds. Varying assumptions about variability in exploitation among CUs between CV = 0 and 0.44 in forward projections did not impact the distribution of correlations in spawner abundances in the projections (results not shown).  
+Exploitation rates for Interior Fraser Coho are only available at the SMU-level due to limited coded-wire indicator programs<!--LW: changed from stocks--> (1-2 CUs with indicators / year) that have been available for the Fishery Regulation Assessment Model used by the Pacific Salmon Commission for Coho Salmon [@pacificsalmoncommissionJointCohoTechnical2013]. As a result, empirically-based estimates of among-CU variability in exploitation rates are not available. However, there are reasons to expect exploitation rates to vary among CUs in a given year, including differences in freshwater fisheries.  We assumed that CU-specific variability in exploitation rates was half the common (SMU-level) interannual variability (CV=0.22), and varied this in sensitivity analyses from 0 and 0.44 to cover plausible bounds. Varying assumptions about variability in exploitation among CUs between CV = 0 and 0.44 in forward projections did not impact the distribution of correlations in spawner abundances in the projections (results not shown).  
 
 
 
@@ -518,16 +518,16 @@ Exploitation rates for Interior Fraser Coho are only available at the SMU-level 
 
 ***LRP Estimates***
 
-Aggregate abundance LRPs estimated using the Ricker model as a basis for forward projections were lower than those obtained when the Ricker_priorCap model was used, regardless of which probability threshold was used (Table \@ref(tab:projectedLRPs2020); Figure \@ref(fig:coho-projLRPCurveByOM)). This result is similar to the logistic regression LRPs, where LRPs derived using S~gen~ estimates from the Ricker_priorCap model were higher due to higher S~gen~ values.  The projected curve showing the probability of all CUs being above S~gen~ had a slope that was more gradual and further from the origin for the Ricker_priorCap model compared to the base Ricker model (Figure \@ref(fig:coho-projLRPCurveByOM)). When projection outputs from both stock recruitment model formulations were combined prior to binning in order to create a model-averaged scenario (with equal weight assigned to both scenarios), the resulting probability curve was mid-way between the curves from the two individual models. In all cases, projected curves had higher scatter with increasing aggregate abundance, such that LRP estimates at probability thresholds of p = 0.90 and p = 0.99 were unstable.
+Aggregate abundance LRPs estimated using the Ricker model as a basis for forward projections were lower than those obtained when the Ricker_priorCap model was used, regardless of which probability threshold was used (Table \@ref(tab:projectedLRPs2020); Figure \@ref(fig:coho-projLRPCurveByOM)). This result is similar to the logistic regression LRPs, where LRPs derived using S~gen~ estimates from the Ricker_priorCap model were higher due to higher S~gen~ values.  The projected curve showing the probability of all CUs being above S~gen~ had a slope that was more gradual and further from the origin for the Ricker_priorCap model compared to the base Ricker model (Figure \@ref(fig:coho-projLRPCurveByOM)). When projection outputs from both stock-recruitment model formulations were combined prior to binning in order to create a model-averaged scenario (with equal weight assigned to both scenarios), the resulting probability curve was mid-way between the curves from the two individual models. In all cases, projected curves had higher scatter with increasing aggregate abundance, such that LRP estimates at probability thresholds of p = 0.90 and p = 0.99 were unstable.
 
-```{r coho-projLRPCurveByOM, fig.cap="Probability of all CUs being above their lower benchmark of S\\textsubscript{gen} along a gradient in aggregate abundances within bins of 200 fish for two different stock recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock recruitment models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > lower benchmarks of S\\textsubscript{gen}. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-projLRPCurveByOM, fig.cap="Probability of all CUs being above their lower benchmark of S\\textsubscript{gen} along a gradient in aggregate abundances within bins of 200 fish for two different stock-recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock-recruitment models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > lower benchmarks of S\\textsubscript{gen}. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-byOM.png")
 ```
 
 
 \renewcommand*{\arraystretch}{1.5}
 \begin{table}[ht]
-\caption{Projection LRPs from forward projections under two different stock recruit model options (Ricker and Ricker\_priorCap), as well as a model averaged case (Combined) in which results from both stock recruit models were equally weighted. For each probability level, the LRP estimate represents that probability that all CUs will be above their lower benchmark of S~gen~.}
+\caption{Projection LRPs from forward projections under two different stock-recruit model options (Ricker and Ricker\_priorCap), as well as a model averaged case (Combined) in which results from both stock-recruit models were equally weighted. For each probability level, the LRP estimate represents that probability that all CUs will be above their lower benchmark of S~gen~.}
 \begin{tabular}{p{3.5cm} p{3cm} p{3.5cm} p{3cm}}
 \hline  
 Probability & Ricker & Ricker\_priorCap & Combined \\
@@ -545,7 +545,7 @@ Probability & Ricker & Ricker\_priorCap & Combined \\
 Generational average spawning abundance (based on a 3-year geometric mean) remained above the projection LRP derived using the Ricker model with a probability threshold of p = 0.5 for most years between 2000 and 2020. There were two years when aggregate spawning abundance decreased below the LRP: 2006 and 2007 (Figure \@ref(fig:coho-AggEscpSeries-wProjLRP)). In comparison, when projection LRPs were derived using the Ricker_priorCap model with p = 0.5, aggregate spawning abundance remained below the LRP for 11 out of the 21 years.  
 
 
-```{r coho-AggEscpSeries-wProjLRP, fig.cap="Three-year geometric mean of aggregate natural-origin spawning abundance for the Interior Fraser Coho SMU (black line) relative to projection LRP estimates using two different stock recruitment model formulations, Ricker and Ricker\\_priorCap, with a probability threshold of p=0.5. Forward projections used to estimate reference points were parameterized using available 1998-2020 time series under base model assumptions.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-AggEscpSeries-wProjLRP, fig.cap="Three-year geometric mean of aggregate natural-origin spawning abundance for the Interior Fraser Coho SMU (black line) relative to projection LRP estimates using two different stock-recruitment model formulations, Ricker and Ricker\\_priorCap, with a probability threshold of p=0.5. Forward projections used to estimate reference points were parameterized using available 1998-2020 time series under base model assumptions.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-EscpSeries-wProjLRP.png")
 ```
 
@@ -604,7 +604,7 @@ Despite the differences in status estimates in some years for CU status-based an
 ## DISCUSSION
 
 
-The Interior Fraser Coho SMU is considered a data-rich SMU because it has stock-recruitment time series for all five CUs within the SMU, which allowed for the estimation of stock recruitment-based benchmarks (S~gen~). However, time series were restricted to years after 1998, when spawner abundance data were collected with more consistent methodologies and regularity. This period also aligns with the low productivity period [@deckerAssessmentInteriorFraser2014] when the SMU abundance is considered depressed relative to historical levels. Despite the short time series, Interior Fraser Coho are well-suited for looking at the application of aggregate abundance LRPs due to the long history of using aggregate abundance recovery targets and fisheries reference points [@ifcrtConservationStrategyCoho2006; @kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. While we were able to estimate aggregate abundance LRPs using a suite of CU-level benchmarks and LRP estimation methods (logistic regression and projection), our results highlight variability in status against aggregate abundance LRPs that in some cases deviates from status against CU status-based LRPs. Our results also highlight the sensitivity of logistic regression based LRPs to data availability.
+The Interior Fraser Coho SMU is considered a data-rich SMU because it has stock-recruitment time series for all five CUs within the SMU, which allowed for the estimation of stock-recruitment based benchmarks (S~gen~). However, time series were restricted to years after 1998, when spawner abundance data were collected with more consistent methodologies and regularity. This period also aligns with the low productivity period [@deckerAssessmentInteriorFraser2014] when the SMU abundance is considered depressed relative to historical levels. Despite the short time series, Interior Fraser Coho are well-suited for looking at the application of aggregate abundance LRPs due to the long history of using aggregate abundance recovery targets and fisheries reference points [@ifcrtConservationStrategyCoho2006; @kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. While we were able to estimate aggregate abundance LRPs using a suite of CU-level benchmarks and LRP estimation methods (logistic regression and projection), our results highlight variability in status against aggregate abundance LRPs that in some cases deviates from status against CU status-based LRPs. Our results also highlight the sensitivity of logistic regression based LRPs to data availability.
 
 
 ### CU status-based vs. Aggregate Abundance LRP Methods
