--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -89,7 +89,7 @@ Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver
 WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-age 2 survival rates for WCVI Chinook and low spawner levels over the past two decades are reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. Since the mid 1990s, a variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
 
 
-For some Chinook Salmon populations including those on the west coast of Vancouver Island, habitat-based benchmarks have been used to derive status on spawner abundances [@parkenHabitatbasedMethodsEstimate2006]. These benchmarks are estimated using an empirical relationship between watershed area of spawning habitat and two stock-recruitment benchmarks, spawner abundances at replacement, S~REP~ (also called spawners at equilibrium S~eq~), and S~MSY~, in a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010].  Benchmarks can then be predicted for populations without stock-recruitment data from their watershed area.
+For some Chinook Salmon populations including those on the west coast of Vancouver Island, habitat-based benchmarks have been used to derive status on spawner abundances [@parkenHabitatbasedMethodsEstimate2006]. These benchmarks are estimated using an empirical relationship between watershed area of spawning habitat and two stock-recruitment benchmarks, spawner abundances at replacement, S~REP~ (also called spawners at equilibrium S~eq~), and S~MSY~, in a meta-analysis of 25 Chinook populations<!--LW: changed from stocks--> across North America [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010].  Benchmarks can then be predicted for populations without stock-recruitment data from their watershed area.
 
 In November 2020, @cosewicCOSEWICAssessmentStatus2020 designated the West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot DUs as Threatened, and West Vancouver Island-North as Data Deficient. Threatened statuses were determined primarily from genetic risks of hatcheries enhancement and habitat threats from forestry. The West Vancouver Island-North DU was designated data deficient because it contains only one escapement indicator population.
 
