--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -48,16 +48,16 @@ Second, model diagnostics do not support logistic regressions and their associat
 
 **Lesson 5: Stochastic projections can be used to estimate aggregate abundance LRPs under various assumptions about population dynamics and covariance in dynamics among CUs. This approach allows uncertainties in our understanding of population dynamics to be represented in a more comprehensive way than other LRP methods.**
 
-Projection LRPs rely on closed-loop simulation models to quantify the emergent relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of stock-recruitment parameters (productivity and capacity) and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho case study, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook case study, Section \@ref(WCVIchinookChapter)). 
+Projection LRPs rely on closed-loop simulation models to quantify the emergent relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of stock-recruitment parameters (productivity and capacity) and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock-recruitment analyses (see Interior Fraser Coho case study, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook case study, Section \@ref(WCVIchinookChapter)). 
 
 
 Furthermore, we demonstrated an approach to choosing parameters and model assumptions used in the projections so that correlations in spawner abundances in projections were similar to observed correlations. We recommend that correlations in CUs within projections are explored under various model assumptions, and that model parameters are tuned to derive realistic correlations.
 
 
-The projection LRP approach is flexible in that allows for consideration of structural uncertainty in SMU population dynamics through the consideration of alternative scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and variability in exploitation among inlets. For the Interior Fraser Coho study case, structural uncertainty in the formulation of the stock recruit model was considered through alternative projection scenarios. In this case, we demonstrated how a model-averaging approach could be used to combine projections from these two scenarios into a single LRP.  
+The projection LRP approach is flexible in that allows for consideration of structural uncertainty in SMU population dynamics through the consideration of alternative scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and variability in exploitation among inlets. For the Interior Fraser Coho study case, structural uncertainty in the formulation of the stock-recruit model was considered through alternative projection scenarios. In this case, we demonstrated how a model-averaging approach could be used to combine projections from these two scenarios into a single LRP.  
 
 
-Future implementations of projection LRPs could also consider temporal shifts in stock recruitment parameters, the potential for depensatory population dynamics at low stock size, and future variability in fishery exploitation rates. Decisions about which scenarios to consider should be made on a case-by-case basis, and should be dependent on current understandings of key uncertainties for each SMU.
+Future implementations of projection LRPs could also consider temporal shifts in stock-recruitment parameters, the potential for depensatory population dynamics at low population size, and future variability in fishery exploitation rates. Decisions about which scenarios to consider should be made on a case-by-case basis, and should be dependent on current understandings of key uncertainties for each SMU.
 
 \
 &nbsp;
