--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -29,7 +29,7 @@ Upper Knight and Bute Inlet CUs are both associated with long fjords that run fr
 Chum from the Upper Knight and Bute Inlet CUs are exposed to different threats to habitat, survival and productivity than the other five CUs in both the freshwater and the early marine phase. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. In the Bute Inlet CU, the glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in near shore marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. 
 
 
-Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptive Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be inferred for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
+Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptive Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021], although declines in Pink salmon populations in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be inferred for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
 
 \needspace{0.35\textheight}
 
@@ -78,7 +78,7 @@ We chose the ISC Chum SMU as a case study because we were interested in explorin
 
 ## DATA
 
-We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. We chose to apply infilling procedures for this SMU when possible to develop metrics of wild spawner abundance since infilling methods for this SMU have been previously peer reviewed [@holtEvaluatingBenchmarksBiological2018]. This differs from the approach taken for WCVI Chinook, in which infilling methods were not implemented due to high and variable hatchery influences. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed-fishery catch to CUs within the run-reconstruction model. As a result, we did not consider recruitment time-series to be reliable enough to estimate stock recruitment-based benchmarks such as S\textsubscript{MSY} and S\textsubscript{gen}. We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
+We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. We chose to apply infilling procedures for this SMU when possible to develop metrics of wild spawner abundance since infilling methods for this SMU have been previously peer reviewed [@holtEvaluatingBenchmarksBiological2018]. This differs from the approach taken for WCVI Chinook, in which infilling methods were not implemented due to high and variable hatchery influences. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed-fishery catch to CUs within the run-reconstruction model. As a result, we did not consider recruitment time-series to be reliable enough to estimate stock-recruitment based benchmarks such as S\textsubscript{MSY} and S\textsubscript{gen}. We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
 
 
 @vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon Chum CUs. More details can be found in Appendix \@ref(app:appendix-chum). We removed three systems with extensive enhancement (Qualicum River and Little Qualicum River from spawning channels, and Puntledge River from hatchery production, all within the Georgia Strait CU). It is assumed that the enhanced contribution to spawning was near 100% for these systems.
@@ -97,7 +97,7 @@ The first approach is consistent with Canada's WSP and is recommended by Holt et
 When applying the multidimensional algorithm used within the Salmon Scanner to ISC Chum, we used percentile benchmarks when they were available for a CU. For CUs in which percentile benchmarks were not appropriate, the multidimensional algorithm used trends in spawner abundance as a basis for assessing CU status (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend at least partially on percentile benchmarks.
 
 
-Percentile benchmarks can be applied to assess status of CUs when other data - like benchmarks based on productivity or habitat - are not available or reliable [@holtEvaluatingBenchmarksBiological2018; @clarkEvaluationPercentileApproach2014]. The suitability of percentile benchmarks was evaluated for ISC Chum by @holtEvaluatingBenchmarksBiological2018, who tested how well percentile benchmarks matched benchmarks from stock-recruit parameters, using retrospective and simulation analyses. @holtEvaluatingBenchmarksBiological2018 also calculated benchmarks based on stock-recruit model parameters for ISC Chum stocks, but did not recommend them due to uncertainty in spawner and recruit data. They tested how well a 25% percentile benchmark (and higher values up to 50%) compared to estimates of S\textsubscript{gen} for these CUs. They found that percentile benchmarks (from 25-50%) under moderate to high harvest rates and low to moderate productivity tended to underestimate 'true' S\textsubscript{gen} values (estimated from the same data), which would lead to optimistic and incorrect status assessments. More work on alternatives to percentile benchmarks were needed in this case.
+Percentile benchmarks can be applied to assess status of CUs when other data - like benchmarks based on productivity or habitat - are not available or reliable [@holtEvaluatingBenchmarksBiological2018; @clarkEvaluationPercentileApproach2014]. The suitability of percentile benchmarks was evaluated for ISC Chum by @holtEvaluatingBenchmarksBiological2018, who tested how well percentile benchmarks matched benchmarks from stock-recruit parameters, using retrospective and simulation analyses. @holtEvaluatingBenchmarksBiological2018 also calculated benchmarks based on stock-recruit model parameters for ISC Chum CUs, but did not recommend them due to uncertainty in spawner and recruit data. They tested how well a 25% percentile benchmark (and higher values up to 50%) compared to estimates of S\textsubscript{gen} for these CUs. They found that percentile benchmarks (from 25-50%) under moderate to high harvest rates and low to moderate productivity tended to underestimate 'true' S\textsubscript{gen} values (estimated from the same data), which would lead to optimistic and incorrect status assessments. More work on alternatives to percentile benchmarks were needed in this case.
 
 
 For this case study, percentile benchmarks were calculated using the raw infilled time series of annual escapement (i.e., not smoothed). In contrast, status for year $i$ was determined by comparing the generational mean (geometric mean on a 4 year window, ending with year $i$) spawner abundance with the benchmark. This approach of using raw (unsmoothed) escapements when calculating benchmarks, and generational smoothed escapements when estimating CU status relative to benchmarks, is consistent with the approaches taken for our other two case studies for proortional LRPs. 
@@ -209,7 +209,7 @@ In supplementary analyses, we evaluated percentile benchmarks retrospectively fo
 
 ### Methods
 
-We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. While we initially considered logistic regression LRPs that used S~gen~ as a lower CU benchmark instead of percentiles, we decided to drop this approach due to unreliable  stock recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
+We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. While we initially considered logistic regression LRPs that used S~gen~ as a lower CU benchmark instead of percentiles, we decided to drop this approach due to unreliable  stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
 
 
 Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic regression LRPs for this SMU as was done for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
@@ -306,13 +306,13 @@ Using a multidimensional approach allowed us to include two CUs that did not hav
 
 
 
-This case study highlighted requirements and limitations of percentile benchmarks on data-limited CUs. Shifting baselines are one of the challenges of applying this method. If abundance has decreased over time, the resulting percentile benchmark will also decrease as more data is included (Figure \@ref(fig:chum-perc-retro)). This can arise from a decrease in abundance in the period of data or by an unrecorded high level of abundance before the period of data followed by a decrease before data are available. Thus, a CU with low abundance could be Green status based on the current benchmark, but would be Red using a benchmark with data before decreases in abundance. The result is an overly optimistic view of current status that does not reflect the reality of long-term declines. Two CUs (Southern Coastal Streams and Upper Knight) showed evidence of shifting baselines as abundances decreased over the last several decades (Figure \@ref(fig:chum-perc-retro)). Decreasing productivity can exacerbate this pattern. As productivity decreases, a larger abundance of spawners would be required to produce the same number of recruits. Experts should thoroughly review historical abundance data and determine where shifting baselines may be occurring, and can adjust benchmarks accordingly. In some cases it may be appropriate to choose benchmarks based on historical data or information prior to declines to avoid shifting baselines [@holtCautionsUsingPercentilebased2015]. Thus, while they are useful for CUs that lack reliable stock-recruit information, they cannot be used universally on data-limited stocks. 
+This case study highlighted requirements and limitations of percentile benchmarks on data-limited CUs. Shifting baselines are one of the challenges of applying this method. If abundance has decreased over time, the resulting percentile benchmark will also decrease as more data is included (Figure \@ref(fig:chum-perc-retro)). This can arise from a decrease in abundance in the period of data or by an unrecorded high level of abundance before the period of data followed by a decrease before data are available. Thus, a CU with low abundance could be Green status based on the current benchmark, but would be Red using a benchmark with data before decreases in abundance. The result is an overly optimistic view of current status that does not reflect the reality of long-term declines. Two CUs (Southern Coastal Streams and Upper Knight) showed evidence of shifting baselines as abundances decreased over the last several decades (Figure \@ref(fig:chum-perc-retro)). Decreasing productivity can exacerbate this pattern. As productivity decreases, a larger abundance of spawners would be required to produce the same number of recruits. Experts should thoroughly review historical abundance data and determine where shifting baselines may be occurring, and can adjust benchmarks accordingly. In some cases it may be appropriate to choose benchmarks based on historical data or information prior to declines to avoid shifting baselines [@holtCautionsUsingPercentilebased2015]. Thus, while they are useful for CUs that lack reliable stock-recruit information, they cannot be used universally on data-limited CUs. 
 
 
 Existing guidelines and cautions should be incorporated into any LRP analysis using percentile benchmarks. We followed guidelines from @holtEvaluatingBenchmarksBiological2018 and did not use percentile benchmarks for CUs with low productivity and high exploitation rate (Tables \@ref(tab:CU-summary), \@ref(tab:holt-tab6)). In their simulation study, percentile-based benchmarks overestimated status with harvest rates >40% and $\alpha$ <4, or harvest rates 20-40% and $\alpha$ <2.5. In these cases of low productivity and high harvest rates, more exploration could be done on alternative benchmarks. These could include benchmarks based on Traditional Ecological Knowledge, habitat availability, or other information. If productivity and/or harvest is unknown, low contrast in escapement time-series could be indicators of cases where percentile benchmarks may not be appropriate [@holtEvaluatingBenchmarksBiological2018]. We also note that cases with identical lower and upper benchmarks carry the risk of moving immediately from Green to Red status with time in the Amber status zone (North East Vancouver Island, Upper Knight, Loughborough, Table \@ref(tab:CU-summary)). CUs with shorter time series also have the risk of unreliable percentile benchmarks. Confidence intervals for percentile benchmarks can also be derived by bootstrapping escapement data, accounting for autocorrelation in time-series [@peacockEvaluatingConsequencesCommon2020; @holtEvaluatingBenchmarksBiological2018].
 
 
-@clarkEvaluationPercentileApproach2014 applied a similar percentile-based approach for Alaskan salmon stocks, where applicability of percentiles was categorized in into 3 tiers based on contrast in spawner abundances, harvest rate, and precision of escapement data. They tested the suitability of this tiered approach with theoretical, simulation, and meta-analysis methods using 76 stock-recruitment data sets from Alaska covering all 5 species of Pacific salmon. The goal of these tiers was to choose a Sustainable Escapement Goal (SEG; an upper and lower percentile) as a proxy for keeping escapement within a range that includes S\textsubscript{MSY} [@clarkEvaluationPercentileApproach2014]. Moving to British Columbia, @hilbornBritishColumbiaChum2012 adopted the percentile-based thresholds for evaluating the status of Inside South Coast Chum in BC for the purpose of certification with the Marine Stewardship Council [@hilbornBritishColumbiaChum2012]. 
+@clarkEvaluationPercentileApproach2014 applied a similar percentile-based approach for Alaskan salmon populations, where applicability of percentiles was categorized in into 3 tiers based on contrast in spawner abundances, harvest rate, and precision of escapement data. They tested the suitability of this tiered approach with theoretical, simulation, and meta-analysis methods using 76 stock-recruitment data sets from Alaska covering all 5 species of Pacific salmon. The goal of these tiers was to choose a Sustainable Escapement Goal (SEG; an upper and lower percentile) as a proxy for keeping escapement within a range that includes S\textsubscript{MSY} [@clarkEvaluationPercentileApproach2014]. Moving to British Columbia, @hilbornBritishColumbiaChum2012 adopted the percentile-based thresholds for evaluating the status of Inside South Coast Chum in BC for the purpose of certification with the Marine Stewardship Council [@hilbornBritishColumbiaChum2012]. 
 
 
 Percentile benchmarks are used differently in Alaska and BC. In BC, percentiles are used at the CU scale, while in Alaska they are applied to each river [@mckinleyReviewSalmonEscapement2020]. ISC chum includes 296 streams among the seven CUs, with 126 in Strait of Georgia alone. Aggregating over river systems within CUs ignores the distribution of spawning within the CU and may not capture the loss of some less productive streams, rivers, or sub-populations within the CU. This risk is especially relevant in this case study because the data is infilled assuming correlation in spawning escapement within CUs.
